# OpenJanus

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
.github/workflows/: artifact.yml
src/openjanus/: __main__.py  main.py
src/openjanus/app/: banner.py  config.py
src/openjanus/chains/: base.py  prompt.py
src/openjanus/chains/atc/: base.py  prompt.py
src/openjanus/chains/base/: prompt.py
src/openjanus/chains/item_finder/: base.py  prompt.py
src/openjanus/chains/onboardia/: base.py  keypress.py  prompt.py
src/openjanus/chains/planetary_survey/: base.py  prompt.py
src/openjanus/integrations/: base.py
src/openjanus/integrations/cornerstone/item_finder/: __init__.py
src/openjanus/integrations/cornerstone/planetary_survey/: __init__.py
src/openjanus/stt/whisper/: parser.py  recorder.py
src/openjanus/toolkits/: toolkit.py
src/openjanus/tts/elevenlabs/: async_patch.py  chat.py  tts.py
src/openjanus/tts/whisper/: chat.py  tts.py
src/openjanus/utils/: exceptions.py  text_coloring.py
