[project]
name = "OpenJanus"
version = "0.1.1"
description = "A voice controlled Intelligent Assistant for Star Citizen"
authors = [
    {name = "Und3rf10w", email = "dontemailme@example.com"},
]
dependencies = [
    "langchain",
    "openai==1.2.4",
    "elevenlabs",
    "tiktoken>=0.5.1",
    "pydub>=0.25.1",
    "pynput>=1.7.6",
    "pyaudio>=0.2.14",
    "toml>=0.10.2",
]
requires-python = ">=3.11.6"
readme = "README.md"
license = {text = "N/A"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

